src/objects/sked_Support_Note__c.object
<CustomObject>
    <fields>
        <fullName>Sked_Note_Type__c</fullName>
        <label>Note Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New details</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Notes</relationshipLabel>
        <relationshipName>sked_Support_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Client_Ref__c</fullName>
        <label>Client Ref</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Departure_Time__c</fullName>
        <label>Departure Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_EHR_Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Observation</label>
        <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
        <relationshipLabel>Support Notes</relationshipLabel>
        <relationshipName>sked_Support_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Support Notes</relationshipLabel>
        <relationshipName>sked_Support_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Job_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Allocation</label>
        <referenceTo>sked__Job_Allocation__c</referenceTo>
        <relationshipLabel>Support Notes</relationshipLabel>
        <relationshipName>sked_Support_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Support Notes</relationshipLabel>
        <relationshipName>sked_Support_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Note_Significance__c</fullName>
        <label>Note Significance</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Show_in_SkeduloX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in SkeduloX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sked_Support_Minutes__c</fullName>
        <label>Support Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked_Support_Note__c</fullName>
        <label>Support Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Support_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Plan</label>
        <referenceTo>sked_Support_Plan__c</referenceTo>
        <relationshipLabel>Support Notes</relationshipLabel>
        <relationshipName>sked_Support_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Support_Worker_Name__c</fullName>
        <label>Support Worker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Support Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>